--- a/assets/scss/Header.scss
+++ b/assets/scss/Header.scss
@@ -3,6 +3,8 @@ header {
   flex-flow: row nowrap;
   justify-content: space-between;
   align-content: center;
+  overflow: hidden; /* NEW */
+  min-width: 0; /* NEW; needed for Firefox */
 }
 
 a {
