--- a/assets/scss/Schedule.scss
+++ b/assets/scss/Schedule.scss
@@ -3,11 +3,13 @@
 .schedule {
   display: grid;
   grid:
-    [row1-start] "header header header" 20% [row1-end]
-    [row2-start] "now next future" 1fr [row2-end]
+    [row1-start] "header header header" 1fr [row1-end]
+    [row2-start] "now next future" 4fr [row2-end]
     / 1fr 1fr 1fr;
   grid-gap: 15px;
   font-size: 1.3em;
+  overflow: hidden; /* NEW */
+  min-width: 0; /* NEW; needed for Firefox */
 }
 
 .event {
